[package]
name = "sh3r10ck"
version = "0.1.0"
edition = "2021"
author = "1tchyBa11z"
about = "A simple TCP/UDP/QUIC Port scanner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
itertools = "0.10.5"
tokio = { version = "1", features = ["full"]}
futures = "0.3.25"
